# upemba-umis

./: .gitignore  Ayants droit ICCN.xlsx  CONTRIBUTING.md  DEVELOPMENT_PLAYBOOK.md  DISTRIBUTION_GUIDE.md  LICENSE  README.md  build-production.bat  configure-startup.bat
docs/: API_REFERENCE.md  (+3 more)
src/backend/: MANIFEST.in  cli.py  manage.py  pyproject.toml  setup.py  test_sync.py  umis.spec
src/backend/beneficiaries/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/backend/beneficiaries/migrations/: 0001_initial.py  0002_alter_employee_options_and_more.py
src/backend/consultations/: models.py  serializers.py  urls.py  views.py
src/backend/consultations/migrations/: 0001_initial.py
src/backend/core/: admin.py  audit.py  mixins.py  permissions.py  tests.py  views.py
src/backend/core/migrations/: 0001_initial.py
src/backend/core/models/: __init__.py  audit.py  base.py
src/backend/core/static/: __next._full.txt  __next._index.txt  _not-found.html  _not-found.txt
src/backend/core/templates/: index.html
src/backend/core/utils/: signature.py
src/backend/locations/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/locations/migrations/: 0001_initial.py
src/backend/pharmacy/: admin.py  models.py  serializers.py  services.py  signals.py  tests_lot.py  urls.py  views.py
src/backend/pharmacy/migrations/: 0001_initial.py  0002_alter_stockmovement_date_and_more.py  (+1 more)
src/backend/static/: __next.__PAGE__.txt  __next._head.txt  __next._tree.txt
src/backend/umis_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+60 files in other folders)
